CHANGE LOG / RELEASE NOTES: (Newest to Oldest)

V1.2.024 (ZZ024)
* Added rwg_tile_countrytown_t_zztong_01 - Town Square. (Limited occurrences)
* Added rwg_tile_rural_corner_zztong_06
* Added rwg_tile_rural_t_zztong_05
* Added rwg_tile_rural_t_zztong_06
* Added zztong_cheerdancegym_01
* Added zztong_cryptominer_01
* Added zztong_farm_09
* Bug fixes. (Including zztong_bartertown_joelx.ins file. Hurray!)

V1.1.023 (ZZ023)
* Bug fixes: floating blocks, tile tags, bridge gutters.
* Zombie volume adjustments in zztong_tfp_apartment_adobe_01.
* Added rwg_tile_rural_cap_zztong_02 and rwg_tile_rural_cap_zztong_03.
* Added rwg_tile_rural_corner_zztong_03, rwg_tile_rural_corner_zztong_04,
    and rwg_tile_rural_corner_zztong_05.
* Added rwg_tile_rural_t_zztong_02, rwg_tile_rural_t_zztong_03,
    and rwg_tile_rural_t_zztong_04.
* Slimmed down number of XS POIs on rwg_tile_rural_t_zztong_01
    and rwg_tile_rural_cap_zztong_01.
* Added zztong_cabin_01, zztong_cabin_02, zztong_landscaper_01, zztong_library_01.
* Added zztong_outback_adventure_01, zztong_fire_academy_01.
* Added zztong_trailer_03, zztong_gas_station_01, zztong_store_xs_17, zztong_store_xs_18.
* Added zztong_rural_filler_01, zztong_rural_filler_02, zztong_rural_filler_03, zztong_rural_filler_04.
* zztong_wind_turbine_02 has collapsed under the weight of being too good of a base.
* Removed mine fields from Tiles because they don't match TFPs approach and because
    they remain invisible for too long as you approach them on a vehicle.

V1.0.022 (ZZ022)
* Converted to Version 1.0. (Shocking, I know, right?!)
* Bug fixes. Block changes. Texture changes. Door changes. More bug fixes.
* More POIs support Infested Quests.
* Added rwg_tile_downtown_intersection_zztong_02,
    rwg_tile_downtown_intersection_zztong_03, and
    rwg_tile_downtown_intersection_zztong_04.
* Added rwg_tile_commercial_cap_zztong_01, rwg_tile_commercial_t_zztong_01.
* Changes to rwgmixer.xml config to align with TFP direction and new features.