@@ -181,6 +181,7 @@ zztong_remnant_house_02,POI,POI,,x,58 Watson Drive,,,,,,,,,,,,,,
 zztong_restaurant_01,POI,POI,,x,Spicy Brains Restaurant,,,,,,,,,,,,,,
 zztong_restaurant_02,POI,POI,,x,Waffle House,,,,,,,,,,,,,,
 zztong_restaurant_03,POI,POI,,x,White Castle,,,,,,,,,,,,,,
+zztong_revival_01,POI,POI,,x,Tent Revivial,,,,,,,,,,,,,,
 zztong_roadside_rest_01,POI,POI,,x,Roadside Rest,,,,,,,,,,,,,,
 zztong_rural_filler_01,POI,POI,,x,Wayward Refugees,,,,,,,,,,,,,,
 zztong_rural_filler_02,POI,POI,,x,Hay Field,,,,,,,,,,,,,,
