@@ -1,0 +1,84 @@
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<prefab>
+  <property name="CopyAirBlocks" value="True" />
+  <property name="ExcludeDistantPOIMesh" value="False" />
+  <property name="ExcludePOICulling" value="False" />
+  <property name="DistantPOIYOffset" value="0" />
+  <property name="AllowTopSoilDecorations" value="False" />
+  <property name="DifficultyTier" value="1" />
+  <property name="ShowQuestClearCount" value="1" />
+  <property name="TraderArea" value="False" />
+  <property name="PrefabSize" value="42, 11, 42" />
+  <property name="RotationToFaceNorth" value="2" />
+  <property name="SleeperVolumeSize" value="40, 8, 39" />
+  <property name="SleeperVolumeStart" value="1, 3, 2" />
+  <property name="SleeperVolumeGroupId" value="0" />
+  <property name="SleeperVolumeGroup" value="GroupGenericZombie,9,9" />
+  <property name="SleeperIsLootVolume" value="False" />
+  <property name="SleeperIsQuestExclude" value="False" />
+  <property name="SleeperVolumeFlags" value="4" />
+  <property name="SleeperVolumeTriggeredBy" value=" " />
+  <property name="Zoning" value="none" />
+  <property name="EditorGroups" value="Wilderness" />
+  <property name="Tags" value="wilderness" />
+  <property name="DuplicateRepeatDistance" value="4000" />
+  <property name="QuestTags" value="clear, fetch" />
+  <property name="YOffset" value="-3" />
+  <property name="POIMarkerSize" value="5, 0, 5" />
+  <property name="POIMarkerStart" value="36, 3, -5" />
+  <property name="POIMarkerGroup" value="new" />
+  <property name="POIMarkerTags" value="" />
+  <property name="POIMarkerType" value="RoadExit" />
+  <property name="POIMarkerPartToSpawn" value="" />
+  <property name="POIMarkerPartRotations" value="2" />
+  <property name="POIMarkerPartSpawnChance" value="1" />
+  <property class="Stats">
+    <property name="TotalVertices" value="312894" />
+    <property name="TotalTriangles" value="138977" />
+    <property class="BlockEntities">
+      <property name="Vertices" value="295508" />
+      <property name="Triangles" value="124141" />
+    </property>
+    <property class="ChunkMeshes0">
+      <property name="Vertices" value="12292" />
+      <property name="Triangles" value="6776" />
+    </property>
+    <property class="ChunkMeshes1">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes2">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes3">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes4">
+      <property name="Vertices" value="0" />
+      <property name="Triangles" value="0" />
+    </property>
+    <property class="ChunkMeshes5">
+      <property name="Vertices" value="5094" />
+      <property name="Triangles" value="8060" />
+    </property>
+  </property>
+  <property class="IndexedBlockOffsets">
+    <property class="challenge_polymers">
+      <property name="0" value="28, 3, 11" />
+      <property name="1" value="21, 4, 15" />
+    </property>
+    <property class="FetchContainer">
+      <property name="0" value="20, 3, 22" />
+    </property>
+    <property class="challenge_cars">
+      <property name="0" value="39, 3, 9" />
+      <property name="1" value="37, 3, 16" />
+      <property name="2" value="40, 3, 17" />
+    </property>
+    <property class="Rally">
+      <property name="0" value="37, 4, 1" />
+    </property>
+  </property>
+</prefab>
